# client_server_distributed_storage

./: CMakeLists.txt  Makefile  README.md  client.cpp  client.hpp  progress
client/: client.hpp  request_parser.hpp
common/: common.hpp
src/: Client.cpp  Server.cpp  client.cpp  server.cpp  server.hpp
src/client/: Client.hpp  Request_parser.hpp  client.hpp  request_parser.hpp
src/common/: commands.hpp  common.hpp  exceptions.hpp  ip.hpp  sockets.hpp  structs.hpp  validation.hpp
src/server/: Server.hpp  file_manager.hpp  server.hpp
